--- a/templates/about.html.twig
+++ b/templates/about.html.twig
@@ -2,7 +2,7 @@
 {% block body %}
 <section class="container-fluid">
   <div class="button">
-    <button><a href="#">Retour</a></button>
+    <button><a href="{{ path('home') }}">Retour</a></button>
   </div>
   <div class="container">
     <div class="row">
