--- a/public/sass/contact.scss
+++ b/public/sass/contact.scss
@@ -1,4 +1,29 @@
 section{
+  .button1{
+    button{
+      position: absolute;
+      margin-top: -137px;
+      font-family: 'Myriad Pro';
+      font-size: 1.75rem;
+      border-radius: 5%;
+      border: none;
+      background-color: #da0000;
+
+      &:hover {
+        background-color: #a10000;
+      }
+
+      a {
+        text-decoration: none;
+        color: #ffffff;
+
+        &:hover{
+          text-decoration: none;
+          color: #ffffff;
+        }
+      }
+    }
+  }
   h1{
     margin-top: 15%;
     font-family: Raleway_Bold;
