--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="{{ asset('css/bootstrap.min.css') }}">
   <link rel="stylesheet" href="{{ asset('css/animate.css') }}">
   <link rel="stylesheet" href="{{ asset('css/fontawesome-all.min.css') }}">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
   <link rel="stylesheet" href="{{ asset('css/style.css') }}">
   <link rel="icon" type="image/png" href="{{ asset('img/favicon.png') }}" />
   {% endblock %}
@@ -61,7 +62,7 @@
       </div>
       <div id="droite">
         <div class="projets text-center wow fadeInRightBig" id="un">
-          <a href="#">
+          <a href="{{ path('project1') }}">
             <div>
               <h2>Space Invaders</h2>
               <p>Remake de A à Z du fameux jeu Space Invaders, en JavaScript.</p>
@@ -69,7 +70,7 @@
           </a>
         </div>
         <div class="projets text-center wow fadeInRightBig" id="deux">
-          <a href="#">
+          <a href="{{ path('project2') }}">
             <div>
               <h2>IntegrationS</h2>
               <p>Maintes et maintes integrations HTML5 CSS3.</p>
@@ -77,7 +78,7 @@
           </a>
         </div>
         <div class="projets text-center wow fadeInRightBig" id="trois">
-          <a href="#">
+          <a href="{{ path('project3') }}">
             <div>
               <h2>Poop Time</h2>
               <p>Petite appli pour savoir où sont les toilettes publiques les plus proches.</p>
@@ -85,7 +86,7 @@
           </a>
         </div>
         <div class="projets text-center wow fadeInRightBig" id="quatre">
-          <a href="#">
+          <a href="{{ path('project4') }}">
             <div>
               <h2>WikiFilms</h2>
               <p>On as répertorié les films préférer de toutes la promo 2018 de l'ACS de Vesoul.</p>
@@ -93,7 +94,7 @@
           </a>
         </div>
         <div class="projets text-center wow fadeInRightBig" id="cinq">
-          <a href="#">
+          <a href="{{ path('project5') }}">
             <div>
               <h2>Wordpress</h2>
               <p>Thème Wordpress + Intégration de ce propre thème. Et thème de blog de la promo 2018 de l'ACS Vesoul. </p>
@@ -101,7 +102,7 @@
           </a>
         </div>
         <div class="projets text-center wow fadeInRightBig" id="six">
-          <a href="#">
+          <a href="{{ path('project6') }}">
             <div>
               <h2>Carte Postale</h2>
               <p>Carte postale( rien qu'avec des animations SVG ) pour envoyer à la famille.</p>
@@ -109,10 +110,10 @@
           </a>
         </div>
         <div class="projets text-center wow fadeInRightBig" id="sept">
-          <a href="#">
+          <a href="{{ path('project7') }}">
             <div>
-              <h2>Explorateur de fichier</h2>
-              <p>Explorateur de fichier sur Internet.</p>
+              <h2>CYBeLE</h2>
+              <p>Applcation de gestion/suivi des compétences et employés du CHRU de Besançon.</p>
             </div>
           </a>
         </div>
