--- a/templates/contact.html.twig
+++ b/templates/contact.html.twig
@@ -1,6 +1,9 @@
 {% extends 'base.html.twig' %}
 {% block body %}
 <section class="container-fluid">
+  <div class="button1">
+    <button><a href="{{ path('home') }}">Retour</a></button>
+  </div>
   <div class="container">
     <div class="text-center">
       <h1>Contactez-moi</h1>
